# gbdfed

./: .gitignore  CHANGES  COPYRIGHTS  FGrid.c  FGrid.h  FGridP.h  GEShared.h  GEdit.c  GEdit.h  GEditP.h  GEditTB.c  GEditTB.h  GEditTBP.h  GNUMakefile  GTest.c  GTest.h  GTestP.h  INSTALL  Makefile  Makefile.gtk3  Makefile.in  NEWS  ProgBar.c  ProgBar.h  ProgBarP.h  Project.tmpl  README  aclocal.m4  bdf.c  bdf.h  bdfP.h  bdfcons.c  bdffnt.c  bdfgname.c  bdfgrab.c  bdfgrid.c  bdfotf.c  bdfpkgf.c  bdfpsf.c  bdfttf.c  (+49 more)
.github/workflows/: build.yml
